[project]
name = "Nande"
description = "PySide6 Image Viewer for Game/VFX workflow"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
keywords = [
    "python",
    "library",
    "qt",
    "widgets",
    "development",
]
authors = [
    {name = "Huey Yeng"},
]
maintainers = [
    {name = "Huey Yeng"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
dynamic = [
    "version",
    "dependencies",
]

[project.urls]
"Homepage" = "https://github.com/hueyyeng/Nande"
"Bug Reports" = "https://github.com/hueyyeng/Nande/issues"
"Source" = "https://github.com/hueyyeng/Nande"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nande.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["nande*"]
namespaces = false
